[package]
name        = "nanoimg"
version     = "0.3.0"
edition     = "2021"
description = "Semantic image search in ~2800 lines of Rust"
license     = "MIT"
readme      = "README.md"
keywords    = ["image", "search", "semantic", "siglip", "onnx"]
categories  = ["multimedia::images", "command-line-utilities"]

[[bin]]
name = "nanoimg"
path = "src/main.rs"

[features]
default = ["gpu"]
gpu = ["dep:wgpu", "dep:pollster"]

[dependencies]
wgpu     = { version = "28", optional = true }
pollster = { version = "0.4", optional = true }
clap        = { version = "4", features = ["derive"] }
usearch     = "2"
image       = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff", "webp", "avif"] }
rayon       = "1"
memmap2     = "0.9"
anyhow      = "1"
ureq        = { version = "2", features = ["tls"] }
sha2        = "0.10"
libc        = "0.2"
minifb      = "0.28"
